PCS BAckup 26Dec2023/Backup-Source/objects/texcellency__DHCLog__c.object
<CustomObject>
    <description>Log object to capture diagnostic events on Definitive Healthcare Integration app.</description>
    <fields>
        <fullName>texcellency__Event_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date and time on which this event occurred.</description>
        <inlineHelpText>Date and time on which this event occurred.</inlineHelpText>
        <label>Event Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>texcellency__Level__c</fullName>
        <defaultValue>&quot;DEBUG&quot;</defaultValue>
        <description>Log message level.</description>
        <inlineHelpText>Log message level.</inlineHelpText>
        <label>Level</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__Logger__c</fullName>
        <defaultValue>&quot;DEFAULT&quot;</defaultValue>
        <description>Logger name</description>
        <inlineHelpText>Logger name.</inlineHelpText>
        <label>Logger</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texcellency__Message__c</fullName>
        <description>Log message</description>
        <inlineHelpText>Log Message</inlineHelpText>
        <label>Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DHC Log</label>
    <listViews>
        <fullName>texcellency__All</fullName>
        <columns>NAME</columns>
        <columns>texcellency__Event_Time__c</columns>
        <columns>texcellency__Level__c</columns>
        <columns>texcellency__Logger__c</columns>
        <columns>texcellency__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>texcellency__Detailed_View</fullName>
        <columns>NAME</columns>
        <columns>texcellency__Level__c</columns>
        <columns>texcellency__Logger__c</columns>
        <columns>texcellency__Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed View</label>
    </listViews>
    <nameField>
        <displayFormat>DHC-{YYMMDD}-{0000}</displayFormat>
        <label>DHCLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHC Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>